# SDL_GameEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: engine.hpp  window.hpp
include/SGE/: SGE.hpp  engine.hpp  renderer.hpp  sdl_utilities.hpp
include/SGE/config/: cfg_screen.hpp  config.hpp
include/SGE/events/: event_keeper.hpp  event_manager.hpp
include/SGE/initializers/: controller.hpp  img_initializer.hpp  sdl_initializer.hpp  ttf_initializer.hpp  window_initializer.hpp
include/SGE/scenes/: scene.hpp
include/initializers/: controller.hpp  initializer.hpp  sdl_initializer.hpp  ttf_initializer.hpp  window_initializer.hpp  windows_initializer.hpp
scripts/: build.sh  install-dependencies.sh  run.sh
src/: engine.cpp  main.cpp  renderer.cpp  src.cmake  window.cpp
src/SGE/: engine.cpp  main.cpp  renderer.cpp  sdl_utilities.cpp  window.cpp
src/SGE/config/: cfg_screen.cpp  config.cpp
src/SGE/events/: event_manager.cpp
src/SGE/initializers/: controller.cpp  img_initializer.cpp  initializer.cpp  sdl_initializer.cpp  ttf_initializer.cpp  window_initializer.cpp
src/initializers/: controller.cpp  initializer.cpp  sdl_initializer.cpp  ttf_initializer.cpp  window_initializer.cpp  windows_initializer.cpp
